--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ navname: Home
                     <div class="col-7 px-2 mb-3">
                         <div class="border-radius-3 wow fadeInLeft bg-grad p-2 p-sm-3 p-lg-4 p-xl-5 all-text-white" data-wow-duration="0.8s" data-wow-delay="0s" style="visibility: visible; animation-duration: 0.8s; animation-delay: 0s; animation-name: fadeInLeft;">
                             <span>Our goal:</span>
-                            <h3 class="font-weight-bold">"If we build it, they will come"</h3>
+                            <h3 class="font-weight-bold">Getting you the compensation you deserve.</h3>
                         </div>
                     </div>
                     <div class="col-5 align-self-start pl-2 mb-3">
@@ -138,10 +138,15 @@ navname: Home
     </div>
 </section>
 
+<section class="p-0">
+	<div class="container">
+		<div class="divider"></div>
+	</div>
+</section>
 <!-- =======================
 	Practice Areas -->
 
-<section class="service-block">
+<section class="pb-6 service-block">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-lg-6 align-self-center">
