--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@ navname: Home
                             <h2 class="text-white">Kevin & Jennifer have recovered millions for their clients in South Florida.</h2>
                             <p class="lead">If you are a personal injury victim, you need a law firm that is ready to help with insurance settlements and liability claims. Peña Ramas Law will fight to get you the compensation you deserve.</p>
                             <div>
-                                <a href="#" class="btn btn-primary">Contact us</a>
-                                <a href="#" class="btn btn-link">Our Practice Areas</a>
+                                <a href="#" class="btn btn-primary">Get a FREE Case Evaluation</a>
                             </div>
 
                         </div>
