hero image updates

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ navname: Home
     <div class="height-400-responsive">
         <div class="">
             <!-- slide 1-->
-            <div class="bg-overlay-dark-2" style="background-image:url(assets/images/banner/12.jpg); background-position: center top; background-size: cover;">
+            <div class="home-hero-bg bg-overlay-dark-2" style="background-image:url(assets/images/banner/12.jpg); background-position: center top; background-size: cover;">
                 <div class="container height-400-responsive">
                     <div class="row d-flex h-100 align-items-lg-center">
 
@@ -27,7 +27,7 @@ navname: Home
                             </div>
 
                         </div>
-                        <div class="col-sm-0 col-md-6 col-lg-5">
+                        <div class="partner-photo-wrap col-sm-0 col-md-6 col-lg-5">
                             <div class="hero-form-wrap height-400-responsive">
                                 <div class="partner-photo">
                                     <img src="assets/images/team/kevin-jen.png" alt="Kevin Ramas and Jennifer Peña">
