--- a/faq.html
+++ b/faq.html
@@ -7,3 +7,97 @@ navname: FAQ
 
 </div>
 </div>
+
+<section class="p-0">
+	<div class="innerpage-banner center bg-overlay-dark-7 py-7" style="background:url(assets/images/bg/04.jpg) no-repeat; background-size:cover; background-position: center center;">
+		<div class="container">
+			<div class="row all-text-white">
+				<div class="col-md-12 align-self-center">
+					<h1 class="innerpage-title">Frequently Asked Questions</h1>
+					<h6 class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section class="pb-3">
+		<div class="container">
+			<div class="row">
+				<!-- accordion gradient -->
+				<div class="col-md-8 mb-5">
+					<div class="accordion mb-0 accordion-grad" id="accordion3">
+						<!-- item -->
+						<div class="accordion-item">
+							<div class="accordion-title">
+								<a class="h6 mb-0" data-toggle="collapse" href="#collapse-7">How many free samples can i redeem?</a>
+							</div>
+							<div class="collapse show" id="collapse-7" data-parent="#accordion3">
+								<div class="accordion-content">
+									<p>Due to the limited quantity, each member's account is only entitled to 1 unique free sample. You can check out up to 4 free samples in each checkout. We take such matters very seriously and will look into individual cases thoroughly. </p>
+									<p class="mb-0">We provide digital transformation solutions, enabling companies to make their visions reality. With us at your side, you will find the IT solution to achieve your strategic and financial goals.</p>
+								</div>
+							</div>
+						</div>
+						<!-- item -->
+						<div class="accordion-item">
+							<div class="accordion-title">
+								<a class="h6 mb-0 collapsed" data-toggle="collapse" href="#collapse-8">What are the payment methods available?</a>
+							</div>
+							<div class="collapse" id="collapse-8" data-parent="#accordion3">
+								<div class="accordion-content"> At the moment, we only accept Credit/Debit cards and Paypal payments. Paypal is the easiest way to make payments online. While checking out your order. Be sure to fill in correct details for fast &amp; hassle-free payment processing. A thing that looks beautiful and attractive always grabs eyeballs. The real challenge before companies in today's world is to make their products and services appealing to everyone. It can be the packaging of an item or the design of its website and Applications. </div>
+							</div>
+						</div>
+						<!-- item -->
+						<div class="accordion-item">
+							<div class="accordion-title">
+								<a class="h6 mb-0 collapsed" data-toggle="collapse" href="#collapse-9">Can i pay without a paypal account?</a>
+							</div>
+							<div class="collapse" id="collapse-9" data-parent="#accordion3">
+								<div class="accordion-content"> Yes! It is commonly misunderstood that a Paypal account is needed in order to make payments through Paypal. The truth is you DO NOT need one, although we strongly recommend you sign up to enjoy the added ease of use. </div>
+							</div>
+						</div>
+
+						<!-- item -->
+						<div class="accordion-item">
+							<div class="accordion-title">
+								<a class="h6 mb-0 collapsed" data-toggle="collapse" href="#collapse-10">How does the 30-day free trial work?</a>
+							</div>
+							<div class="collapse" id="collapse-10" data-parent="#accordion3">
+								<div class="accordion-content">Go ahead, kick the tires. You have full access to all the features of wizixo Standard for 30 days. After 30 days you will need to provide a credit card to continue using the Standard features.</div>
+							</div>
+						</div>
+
+						<!-- item -->
+						<div class="accordion-item">
+							<div class="accordion-title">
+								<a class="h6 mb-0 collapsed" data-toggle="collapse" href="#collapse-11">What should I do if I miss my delivery?</a>
+							</div>
+							<div class="collapse" id="collapse-11" data-parent="#accordion3">
+								<div class="accordion-content">We make 3 attempts on 3 continuing business days. In case you miss the delivery, give us a call on (251) 854-6308 or contact us at help@wizixo.com</div>
+							</div>
+						</div>
+						<!-- item -->
+						<div class="accordion-item">
+							<div class="accordion-title">
+								<a class="h6 mb-0 collapsed" data-toggle="collapse" href="#collapse-12">How can I get a refund in case I cancel my plan?</a>
+							</div>
+							<div class="collapse" id="collapse-12" data-parent="#accordion3">
+								<div class="accordion-content"> The refund is provided as per with our cancellation policy. The refund can be credited to the source of payment (Example: debit card, credit card, net banking).</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Sidebar -->
+				<div class="col-md-4 sidebar">
+					<div class="widget bg-light p-3 border-0 border-radius-3">
+						<h4>Have any question? </h4>
+						<p>If have any questions regarding an injury case, please write to us at <a class="text-primary" href="mailto:contact@example.com">help@penaramaslaw.com</a> for more information.</p> or call us at <a class="display-8 text-dark primary-hover" href="#">(555) 555-5555</a>
+					</div>
+				</div>
+				<!-- Sidebar end-->
+
+			</div>
+		</div>
+	</section>
