--- a/practice-areas.html
+++ b/practice-areas.html
@@ -8,3 +8,170 @@ navname: Practice Areas
 
 </div>
 </div>
+
+<section class="p-0">
+	<div class="innerpage-banner center bg-overlay-dark-7 py-7" style="background:url(assets/images/bg/04.jpg) no-repeat; background-size:cover; background-position: center center;">
+		<div class="container">
+			<div class="row all-text-white">
+				<div class="col-md-12 align-self-center">
+					<h1 class="innerpage-title">Practice Areas</h1>
+					<h6 class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="bg-light triangle-down py-5">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-md-8 text-center">
+					<h5 class="m-0 lead-banner">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dolor neque, mollis non fringilla ut, volutpat ac velit. Aliquam ut justo facilisis, pretium nisi a, congue turpis. Maecenas quis orci volutpat, pharetra elit ultrices, venenatis orci. </h5>
+				</div>
+			</div>
+		</div>
+	</section>
+<section class="service">
+		<div class="container">
+			<div class="row pb-6 justify-content-between align-items-center">
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-7">
+					<div class="h-100 icon-grad text-left title pb-0">
+						<h2>Auto Accidents</h2>
+						<div class="feature-box-desc">
+							<p>For anyone who has ever been involved in a motor vehicle collision, the process can be stressful, overwhelming, and financially exhausting.  Often, more questions than answers arise within just the first few days following a crash.  Who will be responsible for fixing my vehicle?  How am I going to be able to work?  Am I going to be responsible for paying my medical bills?</p>
+							<p>Unfortunately, the process can often be time consuming, stressful, and can leave victims feeling hopeless.  During this time, communication with the insurance companies can feel as though you are fighting an uphill battle.    All the while, you may be suffering from serious and often permanent injuries as a result of the collision, which only makes things that much worse. </p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row pb-6 justify-content-between align-items-center">
+				<div class="col-sm-12 col-md-7">
+					<div class="h-100 icon-grad text-left title pb-0">
+						<h2>Truck Accidents</h2>
+						<div class="feature-box-desc">
+							<p>Commercial vehicle, tractor trailer, or semi-truck accidents can cause serious life changing injuries. Trucking collisions can leave victims feeling defenseless and facing a number of overwhelming burdens including the physical and emotional toll of injuries, lost wages, medical expenses, and property damage.   When a motor vehicle accident occurs, including an accident involving a tractor trailer or a commercial vehicle, it is important to take the steps necessary to ensure evidence is preserved and make certain you receive the benefits you are entitled.  If you or someone you love has been injured as a result of a truck accident, please contact Pena Ramas Law.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+			</div>
+			<div class="row pb-6 justify-content-between align-items-center">
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-7">
+					<div class="h-100 icon-grad text-left title pb-0">
+						<h2>Motorcycle Accidents</h2>
+						<div class="feature-box-desc">
+							<p>In today’s day and age, distracted driving has become all too common.  Unfortunately, this all too common practice becomes especially dangerous when a motorcyclist is involved.  If you or someone you know has ever been injured in a motorcycle accident, you understand how truly devastating and stressful this time can be. On top of the emotional toll of dealing with devastating injuries caused in a motorcycle crash, the financial burden of ongoing care and rehabilitation, lost wages, and loss of future earning capacity can be overwhelming.</p>
+							<p>Florida insurance laws and disinterested insurance carriers can often complicate the process of recovering compensation for injured motorcyclists.  In addition, it is a very common occurrence that the insurance company will attempt to blame the motorcyclist for causing the collision, regardless of the facts, in an effort to lessen their responsibility and obligation to pay out claims.  Therefore, it is important for injured riders, or those acting on their behalf, to retain an attorney who has experience handling these types of personal injury claims as quickly as possible.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row pb-6 justify-content-between align-items-center">
+				<div class="col-sm-12 col-md-7">
+					<div class="h-100 icon-grad text-left title pb-0">
+						<h2>Ride Sharing Injuries</h2>
+						<div class="feature-box-desc">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dolor neque, mollis non fringilla ut, volutpat ac velit. Aliquam ut justo facilisis, pretium nisi a, congue turpis. Maecenas quis orci volutpat, pharetra elit ultrices, venenatis orci. Morbi rutrum risus est, ut tincidunt turpis malesuada vitae. Nunc nec sollicitudin urna.</p>
+							<p>Mauris ante tellus, congue placerat maximus in, suscipit ac sem. Duis iaculis nulla tellus, nec tempus nunc tristique eget. Donec tincidunt orci vitae tellus sodales accumsan. Aenean quis tellus tincidunt, cursus erat sit amet, porttitor arcu. Phasellus vehicula, erat sit amet malesuada maximus, neque justo ultricies tellus, nec finibus nisl mauris quis velit. Ut sed eros ipsum.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+			</div>
+			<div class="row pb-6 justify-content-between align-items-center">
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-7">
+					<div class="h-100 icon-grad text-left title pb-0">
+						<h2>Pedestrian Accidents</h2>
+						<div class="feature-box-desc">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dolor neque, mollis non fringilla ut, volutpat ac velit. Aliquam ut justo facilisis, pretium nisi a, congue turpis. Maecenas quis orci volutpat, pharetra elit ultrices, venenatis orci. Morbi rutrum risus est, ut tincidunt turpis malesuada vitae. Nunc nec sollicitudin urna.</p>
+							<p>Mauris ante tellus, congue placerat maximus in, suscipit ac sem. Duis iaculis nulla tellus, nec tempus nunc tristique eget. Donec tincidunt orci vitae tellus sodales accumsan. Aenean quis tellus tincidunt, cursus erat sit amet, porttitor arcu. Phasellus vehicula, erat sit amet malesuada maximus, neque justo ultricies tellus, nec finibus nisl mauris quis velit. Ut sed eros ipsum.</p>
+						</div>
+					</div>
+				</div>	
+			</div>
+			<div class="row pb-6 justify-content-between align-items-center">
+				<div class="col-sm-12 col-md-7">
+					<div class="h-100 icon-grad text-left title pb-0">
+						<h2>Negligent Security</h2>
+						<div class="feature-box-desc">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dolor neque, mollis non fringilla ut, volutpat ac velit. Aliquam ut justo facilisis, pretium nisi a, congue turpis. Maecenas quis orci volutpat, pharetra elit ultrices, venenatis orci. Morbi rutrum risus est, ut tincidunt turpis malesuada vitae. Nunc nec sollicitudin urna.</p>
+							<p>Mauris ante tellus, congue placerat maximus in, suscipit ac sem. Duis iaculis nulla tellus, nec tempus nunc tristique eget. Donec tincidunt orci vitae tellus sodales accumsan. Aenean quis tellus tincidunt, cursus erat sit amet, porttitor arcu. Phasellus vehicula, erat sit amet malesuada maximus, neque justo ultricies tellus, nec finibus nisl mauris quis velit. Ut sed eros ipsum.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+			</div>
+			<div class="row pb-6 justify-content-between align-items-center">
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-7">
+					<div class="h-100 icon-grad text-left title pb-0">
+						<h2>Workers Compensation</h2>
+						<div class="feature-box-desc">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dolor neque, mollis non fringilla ut, volutpat ac velit. Aliquam ut justo facilisis, pretium nisi a, congue turpis. Maecenas quis orci volutpat, pharetra elit ultrices, venenatis orci. Morbi rutrum risus est, ut tincidunt turpis malesuada vitae. Nunc nec sollicitudin urna.</p>
+							<p>Mauris ante tellus, congue placerat maximus in, suscipit ac sem. Duis iaculis nulla tellus, nec tempus nunc tristique eget. Donec tincidunt orci vitae tellus sodales accumsan. Aenean quis tellus tincidunt, cursus erat sit amet, porttitor arcu. Phasellus vehicula, erat sit amet malesuada maximus, neque justo ultricies tellus, nec finibus nisl mauris quis velit. Ut sed eros ipsum.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row pb-6 justify-content-between align-items-center">
+				<div class="col-sm-12 col-md-7">
+					<div class="h-100 icon-grad text-left title pb-0">
+						<h2>Wrongful Death</h2>
+						<div class="feature-box-desc">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dolor neque, mollis non fringilla ut, volutpat ac velit. Aliquam ut justo facilisis, pretium nisi a, congue turpis. Maecenas quis orci volutpat, pharetra elit ultrices, venenatis orci. Morbi rutrum risus est, ut tincidunt turpis malesuada vitae. Nunc nec sollicitudin urna.</p>
+							<p>Mauris ante tellus, congue placerat maximus in, suscipit ac sem. Duis iaculis nulla tellus, nec tempus nunc tristique eget. Donec tincidunt orci vitae tellus sodales accumsan. Aenean quis tellus tincidunt, cursus erat sit amet, porttitor arcu. Phasellus vehicula, erat sit amet malesuada maximus, neque justo ultricies tellus, nec finibus nisl mauris quis velit. Ut sed eros ipsum.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+			</div>
+			<div class="row pb-6 justify-content-between align-items-center">
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-7">
+					<div class="h-100 icon-grad text-left title pb-0">
+						<h2>Primeness Liability</h2>
+						<div class="feature-box-desc">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dolor neque, mollis non fringilla ut, volutpat ac velit. Aliquam ut justo facilisis, pretium nisi a, congue turpis. Maecenas quis orci volutpat, pharetra elit ultrices, venenatis orci. Morbi rutrum risus est, ut tincidunt turpis malesuada vitae. Nunc nec sollicitudin urna.</p>
+							<p>Mauris ante tellus, congue placerat maximus in, suscipit ac sem. Duis iaculis nulla tellus, nec tempus nunc tristique eget. Donec tincidunt orci vitae tellus sodales accumsan. Aenean quis tellus tincidunt, cursus erat sit amet, porttitor arcu. Phasellus vehicula, erat sit amet malesuada maximus, neque justo ultricies tellus, nec finibus nisl mauris quis velit. Ut sed eros ipsum.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row pb-6 justify-content-between align-items-center">
+				<div class="col-sm-12 col-md-7">
+					<div class="h-100 icon-grad text-left title pb-0">
+						<h2>Property Insurance Claims</h2>
+						<div class="feature-box-desc">
+							<p>At Pena Ramas Law, we understand that property insurance claims can be complicated and time consuming.  When an unexpected disaster occurs, the mental, emotional and financial toll can often times seem overwhelming.  The claims process can often be challenging and involve a number a different moving parts in the early stages of a case which could potentially affect the outcome of the claim. Hiring a competent firm to help navigate through the claims process is very important.  Let us help navigate this process by representing you in your commercial or residential claim in order to maximize your recovery.   </p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+			</div>
+			<div class="row pb-6 justify-content-between align-items-center">
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-7">
+					<div class="h-100 icon-grad text-left title pb-0">
+						<h2>Slip and Falls / Premises Liability</h2>
+						<div class="feature-box-desc">
+							<p>Slip and fall or trip and fall accidents can occur anywhere at any time.  A wet floor, misplaced floor mat, uneven sidewalk, or faulty stairs are just a few of many unsafe conditions that can cause someone to suffer severe and personal injury at a home or business. The initial shock, especially when these accidents occur in a public setting, can often be confusing and embarrassing.  It is extremely important that you, as a victim of your slip and fall or trip and fall, know your rights. Do not wait to report the incident or document the scene of the fall.  If you or a loved one are injured or suffered harm as a result of a slip and fall or trip and fall incident, you may be entitled to compensation.  Pena Ramas Law is here to help navigate our clients through the complicated insurance claim and legal claim process.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row pb-6 justify-content-between align-items-center">
+				<div class="col-sm-12 col-md-7">
+					<div class="h-100 icon-grad text-left title pb-0">
+						<h2>Dog Bites</h2>
+						<div class="feature-box-desc">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dolor neque, mollis non fringilla ut, volutpat ac velit. Aliquam ut justo facilisis, pretium nisi a, congue turpis. Maecenas quis orci volutpat, pharetra elit ultrices, venenatis orci. Morbi rutrum risus est, ut tincidunt turpis malesuada vitae. Nunc nec sollicitudin urna.</p>
+							<p>Mauris ante tellus, congue placerat maximus in, suscipit ac sem. Duis iaculis nulla tellus, nec tempus nunc tristique eget. Donec tincidunt orci vitae tellus sodales accumsan. Aenean quis tellus tincidunt, cursus erat sit amet, porttitor arcu. Phasellus vehicula, erat sit amet malesuada maximus, neque justo ultricies tellus, nec finibus nisl mauris quis velit. Ut sed eros ipsum.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+			</div>
+		</div>
+	</section>
