--- a/practice-areas.html
+++ b/practice-areas.html
@@ -30,7 +30,7 @@ navname: Practice Areas
 			</div>
 		</div>
 	</section>
-<section class="service">
+<section class="service pb-0">
 		<div class="container">
 			<div class="row pb-6 justify-content-between align-items-center">
 				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
@@ -44,6 +44,11 @@ navname: Practice Areas
 					</div>
 				</div>
 			</div>
+
+
+			<div class="divider pb-6"></div>
+
+
 			<div class="row pb-6 justify-content-between align-items-center">
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
@@ -55,6 +60,9 @@ navname: Practice Areas
 				</div>
 				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
 			</div>
+
+			<div class="divider pb-6"></div>
+
 			<div class="row pb-6 justify-content-between align-items-center">
 				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
 				<div class="col-sm-12 col-md-7">
@@ -67,6 +75,9 @@ navname: Practice Areas
 					</div>
 				</div>
 			</div>
+
+			<div class="divider pb-6"></div>
+
 			<div class="row pb-6 justify-content-between align-items-center">
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
@@ -79,6 +90,9 @@ navname: Practice Areas
 				</div>
 				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
 			</div>
+
+			<div class="divider pb-6"></div>
+
 			<div class="row pb-6 justify-content-between align-items-center">
 				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
 				<div class="col-sm-12 col-md-7">
@@ -91,6 +105,9 @@ navname: Practice Areas
 					</div>
 				</div>	
 			</div>
+
+			<div class="divider pb-6"></div>
+
 			<div class="row pb-6 justify-content-between align-items-center">
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
@@ -103,6 +120,9 @@ navname: Practice Areas
 				</div>
 				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
 			</div>
+
+			<div class="divider pb-6"></div>
+
 			<div class="row pb-6 justify-content-between align-items-center">
 				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
 				<div class="col-sm-12 col-md-7">
@@ -115,6 +135,9 @@ navname: Practice Areas
 					</div>
 				</div>
 			</div>
+
+			<div class="divider pb-6"></div>
+
 			<div class="row pb-6 justify-content-between align-items-center">
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
@@ -127,6 +150,9 @@ navname: Practice Areas
 				</div>
 				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
 			</div>
+
+			<div class="divider pb-6"></div>
+
 			<div class="row pb-6 justify-content-between align-items-center">
 				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
 				<div class="col-sm-12 col-md-7">
@@ -139,6 +165,9 @@ navname: Practice Areas
 					</div>
 				</div>
 			</div>
+
+			<div class="divider pb-6"></div>
+
 			<div class="row pb-6 justify-content-between align-items-center">
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
@@ -150,6 +179,9 @@ navname: Practice Areas
 				</div>
 				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
 			</div>
+
+			<div class="divider pb-6"></div>
+
 			<div class="row pb-6 justify-content-between align-items-center">
 				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
 				<div class="col-sm-12 col-md-7">
@@ -161,6 +193,9 @@ navname: Practice Areas
 					</div>
 				</div>
 			</div>
+
+			<div class="divider pb-6"></div>
+
 			<div class="row pb-6 justify-content-between align-items-center">
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
@@ -172,6 +207,20 @@ navname: Practice Areas
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+			</div>
+		</div>
+	</section>
+
+	<section class="pb-6 pt-0">
+		<div class="container">
+			<div class="d-block d-md-flex bg-grad p-4 p-sm-5 all-text-white border-radius-3">
+				<div class="align-self-center text-center text-md-left">
+					<h3>Claim Your FREE Case Evaluation Today!</h3>
+					<p class="m-0">If you have been injured, you may be qualified for monetary compensation. Contact us today for a free case evaluation.</p>
+				</div>
+				<div class="mt-3 mt-md-0 text-center text-md-right ml-md-auto align-self-center">
+					<button class="btn btn-white mb-0">Contact Us Now</button>
+				</div>
 			</div>
 		</div>
 	</section>
