--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@ navname: FAQ
 </div>
 
 <section class="p-0">
-	<div class="innerpage-banner center bg-overlay-dark-7 py-7" style="background:url(assets/images/bg/04.jpg) no-repeat; background-size:cover; background-position: center center;">
+	<div class="innerpage-banner center bg-overlay-dark-7 py-7" style="background:url(assets/images/bg/inner-hero.jpg) no-repeat; background-size:cover; background-position: center center;">
 		<div class="container">
 			<div class="row all-text-white">
 				<div class="col-md-12 align-self-center">
@@ -143,7 +143,7 @@ navname: FAQ
 				<div class="col-md-4 sidebar">
 					<div class="widget bg-light p-3 border-0 border-radius-3">
 						<h4>Have any questions?</h4>
-						<p>If have any questions regarding an injury case, please write to us at <a class="text-primary" href="mailto:contact@example.com">info@PRLawFL.com</a> for more information. or call us at <a class="display-8 text-dark primary-hover" href="#">888-775-2935</a></p>
+						<p>If have any questions regarding an injury case, please write to us at <a class="text-primary" href="mailto:info@PRLawFL.com">info@PRLawFL.com</a> for more information. or call us at <a class="display-8 text-dark primary-hover" href="#">888-775-2935</a></p>
 					</div>
 				</div>
 				<!-- Sidebar end-->
