--- a/about-us.html
+++ b/about-us.html
@@ -10,12 +10,12 @@ navname: About Us
 </div>
 
 <section class="p-0">
-	<div class="innerpage-banner center bg-overlay-dark-7 py-7" style="background:url(assets/images/bg/04.jpg) no-repeat; background-size:cover; background-position: center center;">
+	<div class="innerpage-banner center bg-overlay-dark-7 py-7" style="background:url(assets/images/bg/inner-hero.jpg) no-repeat; background-size:cover; background-position: center center;">
 		<div class="container">
 			<div class="row all-text-white">
 				<div class="col-md-12 align-self-center">
 					<h1 class="innerpage-title">About Us</h1>
-					<h6 class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
+					<!--<h6 class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>-->
 				</div>
 			</div>
 		</div>
