--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ navname: Home
                         <div class="row">
                             <div class="col-12">
                                 <div class="alert alert-success contact-msg" style="display: none" role="alert">
-                                    Your message was sent successfully.
+                                    Your message was sent successfully. We will reach out to you as soon as possible.
                                 </div>
                             </div>
                         </div>
@@ -160,28 +160,28 @@ navname: Home
                                 <!-- name -->
                                 <span class="form-group">
                                 	<label>Name</label>
-                                    <input id="con-name" name="name" type="text" class="form-control" placeholder="Name">
+                                    <input id="con-name" name="name" type="text" class="form-control" placeholder="Name" required>
                                 </span>
                             </div>
                             <div class="col-md-4">
                                 <!-- email -->
                                 <span class="form-group">
                                 	<label>Email</label>
-                                    <input id="con-email" name="_replyto" type="email" class="form-control" placeholder="E-mail">
+                                    <input id="con-email" name="_replyto" type="email" class="form-control" placeholder="E-mail" required>
                                 </span>
                             </div>
                             <div class="col-md-4">
                                 <!-- Subject -->
                                 <span class="form-group">
                                 	<label>Phone</label>
-                                    <input id="con-phone" name="phone" type="phone" class="form-control" placeholder="###-###-####">
+                                    <input id="con-phone" name="phone" type="phone" class="form-control" placeholder="###-###-####" required>
                                 </span>
                             </div>
                             <div class="col-md-12">
                                 <!-- Message -->
                                 <span class="form-group">
                                 	<label>Case Details</label>
-                                    <textarea id="con-message" name="message" cols="40" rows="6" class="form-control" placeholder="Give us some information about your case."></textarea>
+                                    <textarea id="con-message" name="message" cols="40" rows="6" class="form-control" placeholder="Give us some information about your case." required></textarea>
                                 </span>
                             </div>
                             <!-- submit button -->
