--- a/practice-areas.html
+++ b/practice-areas.html
@@ -10,7 +10,7 @@ navname: Practice Areas
 </div>
 
 <section class="p-0">
-	<div class="innerpage-banner center bg-overlay-dark-7 py-7" style="background:url(assets/images/bg/04.jpg) no-repeat; background-size:cover; background-position: center center;">
+	<div class="innerpage-banner center bg-overlay-dark-7 py-7" style="background:url(assets/images/bg/inner-hero.jpg) no-repeat; background-size:cover; background-position: center center;">
 		<div class="container">
 			<div class="row all-text-white">
 				<div class="col-md-12 align-self-center">
@@ -33,7 +33,7 @@ navname: Practice Areas
 <section class="service pb-0">
 		<div class="container">
 			<div class="row pb-6 justify-content-between align-items-center">
-				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/car-accident.jpg" alt=""></div>
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
 						<h2>Auto Accidents</h2>
@@ -58,13 +58,13 @@ navname: Practice Areas
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/truck-accident.jpg" alt=""></div>
 			</div>
 
 			<div class="divider pb-6"></div>
 
 			<div class="row pb-6 justify-content-between align-items-center">
-				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/motorcycle.jpg" alt=""></div>
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
 						<h2>Motorcycle Accidents</h2>
@@ -87,13 +87,13 @@ navname: Practice Areas
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/rideshare.jpg" alt=""></div>
 			</div>
 
 			<div class="divider pb-6"></div>
 
 			<div class="row pb-6 justify-content-between align-items-center">
-				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/pedestrian.jpg" alt=""></div>
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
 						<h2>Pedestrian Accidents</h2>
@@ -121,7 +121,7 @@ navname: Practice Areas
 			<div class="divider pb-6"></div>
 
 			<div class="row pb-6 justify-content-between align-items-center">
-					<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+					<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/nursing-home.jpg" alt=""></div>
 					<div class="col-sm-12 col-md-7">
 						<div class="h-100 icon-grad text-left title pb-0">
 							<h2>Nursing Home Negligence</h2>
@@ -147,34 +147,8 @@ navname: Practice Areas
 
 			<div class="divider pb-6"></div>
 
-			<div class="row pb-6 justify-content-between align-items-center">
-				<div class="col-sm-12 col-md-7">
-					<div class="h-100 icon-grad text-left title pb-0">
-						<h2>Wrongful Death</h2>
-						<div class="feature-box-desc">
-							<p>There is nothing more tragic than a life taken too soon as a result of some else’s negligence or recklessness.   Unfortunately, distractions such as cell phone use, substance abuse, and driving under the influence are all too common factors that in many cases lead to the loss off an innocent life.  Instead of being afforded the chance to grieve the loss of your loved one, you are surrounded by an overwhelming amount of unanswered questions and confusion.   If a relative or loved one was killed as a result of an accident in Florida, please give us a call.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
-			</div>
+		
 
-			<div class="divider pb-6"></div>
-
-			<div class="row pb-6 justify-content-between align-items-center">
-				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
-				<div class="col-sm-12 col-md-7">
-					<div class="h-100 icon-grad text-left title pb-0">
-						<h2>Primeness Liability</h2>
-						<div class="feature-box-desc">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dolor neque, mollis non fringilla ut, volutpat ac velit. Aliquam ut justo facilisis, pretium nisi a, congue turpis. Maecenas quis orci volutpat, pharetra elit ultrices, venenatis orci. Morbi rutrum risus est, ut tincidunt turpis malesuada vitae. Nunc nec sollicitudin urna.</p>
-							<p>Mauris ante tellus, congue placerat maximus in, suscipit ac sem. Duis iaculis nulla tellus, nec tempus nunc tristique eget. Donec tincidunt orci vitae tellus sodales accumsan. Aenean quis tellus tincidunt, cursus erat sit amet, porttitor arcu. Phasellus vehicula, erat sit amet malesuada maximus, neque justo ultricies tellus, nec finibus nisl mauris quis velit. Ut sed eros ipsum.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="divider pb-6"></div>
 
 			<div class="row pb-6 justify-content-between align-items-center">
 				<div class="col-sm-12 col-md-7">
@@ -185,13 +159,13 @@ navname: Practice Areas
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/property-claim.jpg" alt=""></div>
 			</div>
 
 			<div class="divider pb-6"></div>
 
 			<div class="row pb-6 justify-content-between align-items-center">
-				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/slip-and-fall.jpg" alt=""></div>
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
 						<h2>Slip and Falls / Premises Liability</h2>
@@ -215,11 +189,21 @@ navname: Practice Areas
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/dog-bite.jpg" alt=""></div>
+			</div>
 
+			<div class="divider pb-6"></div>
 
-
-				
+			<div class="row pb-6 justify-content-between align-items-center">
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/wrongful-death.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-7">
+					<div class="h-100 icon-grad text-left title pb-0">
+						<h2>Wrongful Death</h2>
+						<div class="feature-box-desc">
+							<p>There is nothing more tragic than a life taken too soon as a result of some else’s negligence or recklessness.   Unfortunately, distractions such as cell phone use, substance abuse, and driving under the influence are all too common factors that in many cases lead to the loss off an innocent life.  Instead of being afforded the chance to grieve the loss of your loved one, you are surrounded by an overwhelming amount of unanswered questions and confusion.   If a relative or loved one was killed as a result of an accident in Florida, please give us a call.</p>
+						</div>
+					</div>
+				</div>		
 			</div>
 		</div>
 	</section>
@@ -232,8 +216,71 @@ navname: Practice Areas
 					<p class="m-0">If you have been injured, you may be qualified for monetary compensation. Contact us today for a free case evaluation.</p>
 				</div>
 				<div class="mt-3 mt-md-0 text-center text-md-right ml-md-auto align-self-center">
-					<button class="btn btn-white mb-0">Contact Us Now</button>
+					<button type="button" class="btn btn-white mb-0" data-toggle="modal" data-target="#evaluationmodal">Contact Us Now</button>
 				</div>
 			</div>
 		</div>
 	</section>
+
+	<div class="modal fade text-left" id="evaluationmodal" tabindex="-1" role="dialog" aria-labelledby="evaluationmodal" style="display: none;" aria-hidden="true">
+						<div class="modal-dialog modal-dialog-centered" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">×</span>
+									</button>
+								</div>
+								<div class="modal-body">
+									<h2 class="text-center">Get Your FREE Case Evaluation</h2>
+									<p class="p-0 text-center text-dark">If you have been injured and think you are entitled to compensation, we can help. Tell us about your case in the form below for a free case evaluation.</p>
+									<form  action="https://formspree.io/xyywnbep" method="POST" class="contact-form" id="contact-form" name="contactform">
+                        <!-- Start form message -->
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="alert alert-success contact-msg" style="display: none" role="alert">
+                                    Your message was sent successfully. We will reach out to you as soon as possible.
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End form message -->
+
+                        <!-- Start main form -->
+                        <div class="row">
+                            <div class="col-md-4">
+                                <!-- name -->
+                                <span class="form-group">
+                                	<label>Name</label>
+                                    <input id="con-name" name="name" type="text" class="form-control" placeholder="Name">
+                                </span>
+                            </div>
+                            <div class="col-md-4">
+                                <!-- email -->
+                                <span class="form-group">
+                                	<label>Email</label>
+                                    <input id="con-email" name="_replyto" type="email" class="form-control" placeholder="E-mail">
+                                </span>
+                            </div>
+                            <div class="col-md-4">
+                                <!-- Subject -->
+                                <span class="form-group">
+                                	<label>Phone</label>
+                                    <input id="con-phone" name="phone" type="phone" class="form-control" placeholder="###-###-####">
+                                </span>
+                            </div>
+                            <div class="col-md-12">
+                                <!-- Message -->
+                                <span class="form-group">
+                                	<label>Case Details</label>
+                                    <textarea id="con-message" name="message" cols="40" rows="6" class="form-control" placeholder="Give us some information about your case."></textarea>
+                                </span>
+                            </div>
+                            <!-- submit button -->
+
+                            <div class="col-md-12 text-center"><input class="btn btn-primary btn-block" type="submit" value="Send Message"></div>
+                        </div>
+                        <!-- End main form -->
+                    </form>
+								</div>
+							</div>
+						</div>
+					</div>
