--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ navname: Home
                             <h2 class="text-white">Kevin & Jennifer have recovered millions for their clients in South Florida.</h2>
                             <p class="lead">If you are a personal injury victim, you need a law firm that is ready to help with insurance settlements and liability claims. Peña Ramas Law will fight to get you the compensation you deserve.</p>
                             <div>
-                                <a href="#" class="btn btn-primary">Get a FREE Case Evaluation</a>
+                                <a href="{{ site.baseurl }}/free-case-evaluation.html" class="btn btn-primary">Get a FREE Case Evaluation</a>
                             </div>
 
                         </div>
@@ -58,10 +58,10 @@ navname: Home
             <div class="col-md-6">
                 <div class="row mt-4 mt-md-0">
                     <div class="col-5 offset-1 px-2 mb-3 align-self-end">
-                        <img class="border-radius-3 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s" src="assets/images/service/01.jpg" alt="" style="visibility: visible; animation-duration: 0.8s; animation-delay: 0.4s; animation-name: fadeInUp;">
+                        <img class="border-radius-3 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s" src="assets/images/bg/001.jpg" alt="" style="visibility: visible; animation-duration: 0.8s; animation-delay: 0.4s; animation-name: fadeInUp;">
                     </div>
                     <div class="col-6 px-2 mb-3">
-                        <img class="border-radius-3 wow fadeInRight" data-wow-duration="0.8s" data-wow-delay="0.6s" src="assets/images/service/02.jpg" alt="" style="visibility: visible; animation-duration: 0.8s; animation-delay: 0.6s; animation-name: fadeInRight;">
+                        <img class="border-radius-3 wow fadeInRight" data-wow-duration="0.8s" data-wow-delay="0.6s" src="assets/images/bg/002.jpg" alt="" style="visibility: visible; animation-duration: 0.8s; animation-delay: 0.6s; animation-name: fadeInRight;">
                     </div>
                     <div class="col-7 px-2 mb-3">
                         <div class="border-radius-3 wow fadeInLeft bg-grad p-2 p-sm-3 p-lg-4 p-xl-5 all-text-white" data-wow-duration="0.8s" data-wow-delay="0s" style="visibility: visible; animation-duration: 0.8s; animation-delay: 0s; animation-name: fadeInLeft;">
@@ -70,7 +70,7 @@ navname: Home
                         </div>
                     </div>
                     <div class="col-5 align-self-start pl-2 mb-3">
-                        <img class="border-radius-3 wow fadeInDown" data-wow-duration="0.8s" data-wow-delay="0.2s" src="assets/images/service/03.jpg" alt="" style="visibility: visible; animation-duration: 0.8s; animation-delay: 0.2s; animation-name: fadeInDown;">
+                        <img class="border-radius-3 wow fadeInDown" data-wow-duration="0.8s" data-wow-delay="0.2s" src="assets/images/bg/003.jpg" alt="" style="visibility: visible; animation-duration: 0.8s; animation-delay: 0.2s; animation-name: fadeInDown;">
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@ navname: Home
                 </div>
             </div>
             <div class="col-md-10 col-lg-6 mx-md-auto align-self-center">
-                <img class="img-fluid" src="assets/images/service/01.jpg" alt="">
+                <img class="img-fluid" src="assets/images/service/books.jpg" alt="">
             </div>
         </div>
     </div>
