--- a/practice-areas.html
+++ b/practice-areas.html
@@ -10,7 +10,7 @@ navname: Practice Areas
 </div>
 
 <section class="p-0">
-	<div class="innerpage-banner center bg-overlay-dark-7 py-7" style="background:url(assets/images/bg/inner-hero.jpg) no-repeat; background-size:cover; background-position: center center;">
+	<div class="innerpage-banner center bg-overlay-dark-5 py-7" style="background:url(assets/images/bg/inner-hero.jpg) no-repeat; background-size:cover; background-position: center center;">
 		<div class="container">
 			<div class="row all-text-white">
 				<div class="col-md-12 align-self-center">
@@ -115,7 +115,7 @@ navname: Practice Areas
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/01.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/negligent-security.jpg" alt=""></div>
 			</div>
 
 			<div class="divider pb-6"></div>
@@ -216,71 +216,8 @@ navname: Practice Areas
 					<p class="m-0">If you have been injured, you may be qualified for monetary compensation. Contact us today for a free case evaluation.</p>
 				</div>
 				<div class="mt-3 mt-md-0 text-center text-md-right ml-md-auto align-self-center">
-					<button type="button" class="btn btn-white mb-0" data-toggle="modal" data-target="#evaluationmodal">Contact Us Now</button>
+					<a class="btn btn-white mb-0" href="{{ site.baseurl }}/free-case-evaluation.html">Contact Us Now</a>
 				</div>
 			</div>
 		</div>
 	</section>
-
-	<div class="modal fade text-left" id="evaluationmodal" tabindex="-1" role="dialog" aria-labelledby="evaluationmodal" style="display: none;" aria-hidden="true">
-						<div class="modal-dialog modal-dialog-centered" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-									<span aria-hidden="true">×</span>
-									</button>
-								</div>
-								<div class="modal-body">
-									<h2 class="text-center">Get Your FREE Case Evaluation</h2>
-									<p class="p-0 text-center text-dark">If you have been injured and think you are entitled to compensation, we can help. Tell us about your case in the form below for a free case evaluation.</p>
-									<form  action="https://formspree.io/xyywnbep" method="POST" class="contact-form" id="contact-form" name="contactform">
-                        <!-- Start form message -->
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="alert alert-success contact-msg" style="display: none" role="alert">
-                                    Your message was sent successfully. We will reach out to you as soon as possible.
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End form message -->
-
-                        <!-- Start main form -->
-                        <div class="row">
-                            <div class="col-md-4">
-                                <!-- name -->
-                                <span class="form-group">
-                                	<label>Name</label>
-                                    <input id="con-name" name="name" type="text" class="form-control" placeholder="Name">
-                                </span>
-                            </div>
-                            <div class="col-md-4">
-                                <!-- email -->
-                                <span class="form-group">
-                                	<label>Email</label>
-                                    <input id="con-email" name="_replyto" type="email" class="form-control" placeholder="E-mail">
-                                </span>
-                            </div>
-                            <div class="col-md-4">
-                                <!-- Subject -->
-                                <span class="form-group">
-                                	<label>Phone</label>
-                                    <input id="con-phone" name="phone" type="phone" class="form-control" placeholder="###-###-####">
-                                </span>
-                            </div>
-                            <div class="col-md-12">
-                                <!-- Message -->
-                                <span class="form-group">
-                                	<label>Case Details</label>
-                                    <textarea id="con-message" name="message" cols="40" rows="6" class="form-control" placeholder="Give us some information about your case."></textarea>
-                                </span>
-                            </div>
-                            <!-- submit button -->
-
-                            <div class="col-md-12 text-center"><input class="btn btn-primary btn-block" type="submit" value="Send Message"></div>
-                        </div>
-                        <!-- End main form -->
-                    </form>
-								</div>
-							</div>
-						</div>
-					</div>
