--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Frequently Asked Questions
-description: 
+description: Frequentyl Asked Questions when people are thinking of hiring an injury lawyer
 navname: FAQ
 ---
 
