--- a/free-case-evaluation.html
+++ b/free-case-evaluation.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Free Case Evaluation
-description:
+description: Contact us today for a free case evaluation and see how we can help you.
 navname: Free Case Evaluation
 ---
 
