--- a/practice-areas.html
+++ b/practice-areas.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Practice Areas
-description: The Best Car Wash in Lake Worth, Florida. Mr. Glow Express Car Wash is an express car wash that utilizes state of the art SpinLite® equipment, and we are dedicated to bringing you the best car wash experience imaginable.
+description: Peña Ramas Law specializes in several practice areas.
 navigation_weight: 2
 navname: Practice Areas
 ---
