--- a/about-us.html
+++ b/about-us.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: About Us
-description:
+description: Learn what makes Peña Ramas Law better than our competition.
 navigation_weight: 2
 navname: About Us
 ---
