--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Pena Ramas Law
-description: The Best Car Wash in Lake Worth, Florida. Mr. Glow Express Car Wash is an express car wash that utilizes state of the art SpinLite® equipment, and we are dedicated to bringing you the best car wash experience imaginable.
+title: Peña Ramas Law
+description: Peña Ramas Law - Injury Lawyers in South Florida
 navigation_weight: 1
 navname: Home
 ---
@@ -20,7 +20,7 @@ navname: Home
                     <div class="row d-flex h-100 align-items-lg-center">
 
                         <div class="title col-sm-12 col-lg-6 col-lg-7 mx-auto text-white pb-0">
-                            <h2 class="text-white">Kevin & Jennifer have recovered millions for their clients in South Florida.</h2>
+                            <h1 class="text-white">Kevin & Jennifer have recovered millions for their clients in South Florida.</h1>
                             <p class="lead">If you are a personal injury victim, you need a law firm that is ready to help with insurance settlements and liability claims. Peña Ramas Law will fight to get you the compensation you deserve.</p>
                             <div>
                                 <a href="{{ site.baseurl }}/free-case-evaluation.html" class="btn btn-primary">Get a FREE Case Evaluation</a>
