practice area update

--- a/index.html
+++ b/index.html
@@ -105,22 +105,22 @@ navname: Home
                     <div class="row">
                         <div class="col-6">
                             <ul class="list-group list-group-borderless list-group-icon-primary-bg">
-                                <li class="list-group-item"><i class="fa fa-check"></i>Auto & Truck Accidents</li>
+                                <li class="list-group-item"><i class="fa fa-check"></i>Auto Accidents</li>
+                                <li class="list-group-item"><i class="fa fa-check"></i>Truck Accidents</li>
                                 <li class="list-group-item"><i class="fa fa-check"></i>Motorcycle Accidents</li>
                                 <li class="list-group-item"><i class="fa fa-check"></i>Uber/Lyft/Ride Sharing Injuries</li>
                                 <li class="list-group-item"><i class="fa fa-check"></i>Pedestrian Accidents</li>
                                 <li class="list-group-item"><i class="fa fa-check"></i>Negligent Security</li>
-                                <li class="list-group-item"><i class="fa fa-check"></i>Workers Compensation</li>
                             </ul>
                         </div>
                         <div class="col-6">
                             <ul class="list-group list-group-borderless list-group-icon-primary-bg">
                                 <li class="list-group-item"><i class="fa fa-check"></i>Wrongful Death</li>
-                                <li class="list-group-item"><i class="fa fa-check"></i>Primeness Liability</li>
                                 <li class="list-group-item"><i class="fa fa-check"></i>Premises Liability</li>
                                 <li class="list-group-item"><i class="fa fa-check"></i>Property Insurance Claims</li>
                                 <li class="list-group-item"><i class="fa fa-check"></i>Slip and Falls</li>
                                 <li class="list-group-item"><i class="fa fa-check"></i>Dog Bites</li>
+                                <li class="list-group-item"><i class="fa fa-check"></i>Workers Compensation</li>
                             </ul>
                         </div>
                     </div>
