--- a/about-us.html
+++ b/about-us.html
@@ -94,7 +94,7 @@ navname: About Us
 			<div class="col-md-6 mb-4">
 					<blockquote class="blockquote bg-light" cite="#">
 						<h6 class="mb-2 text-light-gray">This is my first experience with an attorney and it turned out to be the best choice I could have made! Mr. Ramas kept me well informed regarding the status of my case, my rights as a client and resources/assistance available to me. Mr. Ramas reassured me through the process by saying "I have got you covered" and he did just that. My settlement was quicker than expected as well as my final large sum compensation which I was righfully due. I highly recommend Mr. Ramas to anybody looking for a professional, understanding and exceptionally diligent lawyer. - Danielle Hurley, slip and fall victim</h6>
-						<cite>–D.C.</cite>
+						<cite>–D.H.</cite>
 					</blockquote>
 			</div>
 		</div>
