--- a/about-us.html
+++ b/about-us.html
@@ -56,11 +56,11 @@ navname: About Us
 </section>
 
 
-<section class="service-block pb-0">
+<section class="who-we-are pb-0">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-10 col-lg-6 mx-md-auto align-self-center">
-					<img class="img-fluid" src="assets/images/bg/kevin-jennifer.jpg" alt="">
+					<img class="img-fluid" src="assets/images/bg/kevin-jennifer.jpg" alt="Kevin Ramas and Jennifer Peña">
 				</div>
 				<div class="col-sm-12 col-lg-6 align-self-center">
 					<div class="title text-left p-0">
