--- a/practice-areas.html
+++ b/practice-areas.html
@@ -33,7 +33,7 @@ navname: Practice Areas
 <section class="service pb-0">
 		<div class="container">
 			<div class="row pb-6 justify-content-between align-items-center">
-				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/car-accident.jpg" alt=""></div>
+				<div class="col-sm-12 col-md-5"><img class="img-fluid" src="assets/images/service/car-accident.jpg" alt="two cars colliding in an accident"></div>
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
 						<h2>Auto Accidents</h2>
@@ -49,7 +49,7 @@ navname: Practice Areas
 			<div class="divider pb-6"></div>
 
 
-			<div class="row pb-6 justify-content-between align-items-center">
+			<div class="row pb-6 justify-content-between align-items-center flex-column-reverse flex-md-row">
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
 						<h2>Truck Accidents</h2>
@@ -78,7 +78,7 @@ navname: Practice Areas
 
 			<div class="divider pb-6"></div>
 
-			<div class="row pb-6 justify-content-between align-items-center">
+			<div class="row pb-6 justify-content-between align-items-center flex-column-reverse flex-md-row">
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
 						<h2>Uber/Lyft/Ride Sharing Injuries</h2>
@@ -106,7 +106,7 @@ navname: Practice Areas
 
 			<div class="divider pb-6"></div>
 
-			<div class="row pb-6 justify-content-between align-items-center">
+			<div class="row pb-6 justify-content-between align-items-center flex-column-reverse flex-md-row">
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
 						<h2>Negligent Security</h2>
@@ -150,7 +150,7 @@ navname: Practice Areas
 		
 
 
-			<div class="row pb-6 justify-content-between align-items-center">
+			<div class="row pb-6 justify-content-between align-items-center flex-column-reverse flex-md-row">
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
 						<h2>Property Insurance Claims</h2>
@@ -178,7 +178,7 @@ navname: Practice Areas
 
 			<div class="divider pb-6"></div>
 
-			<div class="row pb-6 justify-content-between align-items-center">
+			<div class="row pb-6 justify-content-between align-items-center flex-column-reverse flex-md-row">
 				<div class="col-sm-12 col-md-7">
 					<div class="h-100 icon-grad text-left title pb-0">
 						<h2>Dog Bites</h2>
