--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ navname: Home
 <!-- =======================
 	Intro Blurb -->
 
-<section>
+<section class="why-us">
     <div class="container">
         <div class="row justify-content-between align-items-center">
             <!-- left -->
@@ -133,7 +133,7 @@ navname: Home
     </div>
 </section>
 
-<section class="p-6 bg-light">
+<section class="evaluation-form p-6 bg-light">
     <div class="container">
         <div class="row ">
 
