--- a/about-us.html
+++ b/about-us.html
@@ -132,7 +132,7 @@ navname: About Us
 						<div class="contact-info all-text-white">
 							<div class="contact-box-icon"><i class="ti-mobile"></i></div>
 							<h5 class="mb-2">Phone</h5>
-							<p>888-PR-LAWFL (888-775-2935)</p>
+							<p><a href="tel:1-888-775-29351">888-PR-LAWFL (888-775-2935)</a></p>
 						</div>
 					</div>
 				</div>
