--- a/faq.html
+++ b/faq.html
@@ -143,7 +143,7 @@ navname: FAQ
 				<div class="col-md-4 sidebar">
 					<div class="widget bg-light p-3 border-0 border-radius-3">
 						<h4>Have any questions?</h4>
-						<p>If have any questions regarding an injury case, please write to us at <a class="text-primary" href="mailto:info@PRLawFL.com">info@PRLawFL.com</a> for more information. or call us at <a class="display-8 text-dark primary-hover" href="#">888-775-2935</a></p>
+						<p>If have any questions regarding an injury case, please write to us at <a class="text-primary" href="mailto:info@PRLawFL.com">info@PRLawFL.com</a> for more information. or call us at <a class="display-8 text-dark primary-hover" href="tel:1-888-775-29351">888-775-2935</a></p>
 					</div>
 				</div>
 				<!-- Sidebar end-->
